处理上次合并 rAthena 之后的额外工作 (翻译数据库更新, 升级脚本打包)

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -462,8 +462,6 @@ Body:
   Translation: ""
 - Original: "Castime castfix_sc = %f\n"
   Translation: ""
-- Original: "Changing sex of character '%s' (CID: %d, AID: %d) to 'U' due to incompatible PACKETVER.\n"
-  Translation: ""
 - Original: "Char Server IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "角色伺服器的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Char deletion aborted: %s, Account ID: %u, Character ID: %u\n"
@@ -539,8 +537,6 @@ Body:
 - Original: "Character %s trying to set invalid amount in auctions.\n"
   Translation: ""
 - Original: "Character %s trying to set invalid item index in auctions.\n"
-  Translation: ""
-- Original: "Character '%s' (CID: %d, AID: %d) has sex '%c', but PACKETVER does not support per-character sex. Defaulting to 'U'.\n"
   Translation: ""
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @afk).\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @afk 指令登出了遊戲, 進入離開模式.\n"
@@ -802,6 +798,8 @@ Body:
   Translation: ""
 - Original: "Failed to find sellitem %hu for itemshop NPC '%s' (%s, %d, %d)!\n"
   Translation: ""
+- Original: "Failed to generate a unique web_auth_token with %d retries...\n"
+  Translation: ""
 - Original: "Failed to initialize mapcache data (%s)..\n"
   Translation: ""
 - Original: "Failed to read %s database file from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -844,6 +842,8 @@ Body:
   Translation: ""
 - Original: "Found the file \"%s\", which requires migration to yml.\nDo you want to convert it now? (Y/N)\n"
   Translation: "[{CL_WHITE}][資訊][{CL_RESET}]: 發現 CSV 格式的資料檔案 \"%s\" 需要被遷移到 yml 格式.\n[{CL_CYAN}][選擇][{CL_RESET}]: 請問是否需要對它進行升級轉換? (Y/N)\n"
+- Original: "Found unknown gender '%c' for character '%s' (CID: %d, AID: %d), returning account gender...\n"
+  Translation: ""
 - Original: "Function: %s\n"
   Translation: ""
 - Original: "Function: %s (%d parameter%s):\n"
@@ -891,6 +891,8 @@ Body:
 - Original: "Homunculus loaded (ID: %d - %s / Class: %d / CID: %d).\n"
   Translation: ""
 - Original: "IP Sync in progress...\n"
+  Translation: ""
+- Original: "If you are using an old version of MySQL consider upgrading to a newer release.\n"
   Translation: ""
 - Original: "Illegal data format: GRF compress entry size\n"
   Translation: ""
@@ -1198,7 +1200,7 @@ Body:
   Translation: "正在給資料庫伺服器傳送心跳包, 以維持連線的啟用狀態...\n"
 - Original: "Player %s (%d:%d) sent a hexed packet trying to buy %d of nonstackable item %hu!\n"
   Translation: ""
-- Original: "Player %u sent incorrect cash shop buy packet (len %u:%u)!\n"
+- Original: "Player %u sent incorrect cash shop buy packet (len %u:%[{PRIdPTR}])!\n"
   Translation: ""
 - Original: "Player AID:%d/CID:%d logged off.\n"
   Translation: ""
@@ -1238,6 +1240,8 @@ Body:
   Translation: ""
 - Original: "Received packet 0x%4x (%d bytes) from char-server (connection %d)\n"
   Translation: ""
+- Original: "Received unsupported gender '%d'...\n"
+  Translation: ""
 - Original: "Reloading config file \"%s\"\n"
   Translation: ""
 - Original: "Removed invalid/disabled item (ID: %hu, amount: %d) from cart (char_id: %d).\n"
@@ -1258,8 +1262,6 @@ Body:
   Translation: "已向角色伺服器請求獲取 '[{CL_WHITE}]%d[{CL_RESET}]' 個公會城堡資訊...\n"
 - Original: "Requested non-existant character id: %d!\n"
   Translation: "請求載入的角色資料不存在 (角色編號: %d)\n"
-- Original: "Resetting sex of character '%s' (CID: %d, AID: %d) to 'U' due to incompatible PACKETVER.\n"
-  Translation: ""
 - Original: "Retrieved '[{CL_WHITE}]%d[{CL_RESET}]' (failed: %d) guild bound item(s) for Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
   Translation: ""
 - Original: "SVN Revision: '[{CL_WHITE}]%s[{CL_RESET}]'\n"
@@ -1522,6 +1524,8 @@ Body:
   Translation: "您正在使用管理員身份執行熊貓模擬器, 但我們並不需要如此高的許\可權.\n"
 - Original: "You are running rAthena with root privileges, it is not necessary.\n"
   Translation: "您正在使用 root 許\可權執行熊貓模擬器, 但我們並不需要如此高的許\可權.\n"
+- Original: "Your MySQL does not support SHA2 and MD5 - no hashing will be used for login token creation.\n"
+  Translation: ""
 - Original: "Zero range by %d:%s, divide per 0 avoided!\n"
   Translation: ""
 - Original: "[Instance] Created map '%s' (%d) from '%s' (%d).\n"
@@ -1696,11 +1700,25 @@ Body:
   Translation: ""
 - Original: "bg_info: Unknown battleground info type %d given.\n"
   Translation: ""
+- Original: "bg_on_ready_expire: Invalid battleground queue %d.\n"
+  Translation: ""
 - Original: "bg_on_ready_loopback: Can't find battleground %d in the battlegrounds database.\n"
+  Translation: ""
+- Original: "bg_on_ready_loopback: Invalid battleground queue %d.\n"
+  Translation: ""
+- Original: "bg_on_ready_start: Invalid battleground queue %d.\n"
+  Translation: ""
+- Original: "bg_queue_join_guild: Tried to join non-existent player\n."
   Translation: ""
 - Original: "bg_queue_join_multi: Tried to join non-existent player\n."
   Translation: ""
+- Original: "bg_queue_join_party: Tried to join non-existent player\n."
+  Translation: ""
+- Original: "bg_queue_join_solo: Tried to join non-existent player\n."
+  Translation: ""
 - Original: "bg_queue_leave: Couldn't find player %s in battlegrounds queue.\n"
+  Translation: ""
+- Original: "bg_queue_on_accept_invite: Couldn't find player %s in battlegrounds queue.\n"
   Translation: ""
 - Original: "bg_queue_on_ready: Couldn't find battleground ID %d in battlegrounds database.\n"
   Translation: ""
@@ -1709,6 +1727,8 @@ Body:
 - Original: "bonus_script_data size = %d is too big, please reduce MAX_PC_BONUS_SCRIPT (%d) size. (must be below 0xFFFF).\n"
   Translation: ""
 - Original: "bq_queue_join_multi: Could not find battleground \"%s\" requested by %s (AID: %d / CID: %d)\n"
+  Translation: ""
+- Original: "bq_queue_join_solo: Could not find battleground \"%s\" requested by %s (AID: %d / CID: %d)\n"
   Translation: ""
 - Original: "buildin_%s: Cannot use a player variable '%s' if no player is attached.\n"
   Translation: ""
@@ -2006,7 +2026,7 @@ Body:
   Translation: ""
 - Original: "buildin_gethotkey: request date type must be a integer value.\n"
   Translation: ""
-- Original: "buildin_getinventoryinfo: Query Type (%d) should be from 0-%d.\n"
+- Original: "buildin_getinventoryinfo: The type should be in range 0-%d, currently type is: %d.\n"
   Translation: ""
 - Original: "buildin_getitem2: Nonexistant item %d requested (by conv_num).\n"
   Translation: ""
@@ -2085,6 +2105,10 @@ Body:
 - Original: "buildin_getunitdata: Invalid object type!\n"
   Translation: ""
 - Original: "buildin_getunitdata: Unknown object type!\n"
+  Translation: ""
+- Original: "buildin_getunittitle: Unable to find object with given game ID %d!\n"
+  Translation: ""
+- Original: "buildin_getunittitle: Unable to find unit_data for given game ID %d!\n"
   Translation: ""
 - Original: "buildin_getusers: Unknown type %d.\n"
   Translation: ""
@@ -2364,6 +2388,14 @@ Body:
   Translation: ""
 - Original: "buildin_sethotkey: hotkey type %d is out of range (0..1).\n"
   Translation: ""
+- Original: "buildin_setinventoryinfo: Invalid bound type\n"
+  Translation: ""
+- Original: "buildin_setinventoryinfo: Nonexistant item : %d.\n"
+  Translation: ""
+- Original: "buildin_setinventoryinfo: Nonexistant item index.\n"
+  Translation: ""
+- Original: "buildin_setinventoryinfo: The type should be in range 3-%d, currently type is: %d.\n"
+  Translation: ""
 - Original: "buildin_setmapflag: Invalid map name %s.\n"
   Translation: ""
 - Original: "buildin_setmapflag: Invalid skill ID %d for skill_duration mapflag.\n"
@@ -2435,6 +2467,10 @@ Body:
 - Original: "buildin_setunitname: Invalid object type!\n"
   Translation: ""
 - Original: "buildin_setunitname: Unknown object type!\n"
+  Translation: ""
+- Original: "buildin_setunittitle: Unable to find object with given game ID %d!\n"
+  Translation: ""
+- Original: "buildin_setunittitle: Unable to find unit_data for given game ID %d!\n"
   Translation: ""
 - Original: "buildin_showdigit: Invalid type %u.\n"
   Translation: ""
@@ -2610,6 +2646,8 @@ Body:
   Translation: ""
 - Original: "clif_parse: Received packet 0x%04x specifies invalid packet_len (%d), disconnecting session #%d.\n"
   Translation: ""
+- Original: "clif_parse: Received packet 0x%04x with expected packet length %d, but only %d bytes remaining, disconnecting session #%d.\n"
+  Translation: ""
 - Original: "clif_parse: Received unsupported packet (packet 0x%04x, %d bytes received), disconnecting session #%d.\n"
   Translation: ""
 - Original: "clif_parse_GuildChangeEmblem: Rejected malformed guild emblem (size=%lu, accound_id=%d, char_id=%d, guild_id=%d).\n"
@@ -2618,19 +2656,19 @@ Body:
   Translation: ""
 - Original: "clif_parse_Mail_read: char '%s' trying to read a message not the inbox.\n"
   Translation: ""
-- Original: "clif_parse_ReqOpenBuyingStore: Malformed packet (expected length=%u, length=%u, account_id=%d).\n"
+- Original: "clif_parse_ReqOpenBuyingStore: Malformed packet (expected length=%[{PRIdPTR}], length=%u, account_id=%d).\n"
   Translation: ""
-- Original: "clif_parse_ReqOpenBuyingStore: Unexpected item list size %u (account_id=%d, block size=%u)\n"
+- Original: "clif_parse_ReqOpenBuyingStore: Unexpected item list size %u (account_id=%d, block size=%[{PRIdPTR}])\n"
   Translation: ""
-- Original: "clif_parse_ReqTradeBuyingStore: Malformed packet (expected length=%u, length=%u, account_id=%d).\n"
+- Original: "clif_parse_ReqTradeBuyingStore: Malformed packet (expected length=%[{PRIdPTR}], length=%u, account_id=%d).\n"
   Translation: ""
-- Original: "clif_parse_ReqTradeBuyingStore: Unexpected item list size %u (account_id=%d, buyer_id=%d, block size=%u)\n"
+- Original: "clif_parse_ReqTradeBuyingStore: Unexpected item list size %u (account_id=%d, buyer_id=%d, block size=%[{PRIdPTR}])\n"
   Translation: ""
 - Original: "clif_parse_SearchStoreInfo: Malformed packet (expected count=%u, count=%u, account_id=%d).\n"
   Translation: ""
-- Original: "clif_parse_SearchStoreInfo: Malformed packet (expected length=%u, length=%u, account_id=%d).\n"
+- Original: "clif_parse_SearchStoreInfo: Malformed packet (expected length=%[{PRIdPTR}], length=%u, account_id=%d).\n"
   Translation: ""
-- Original: "clif_parse_SearchStoreInfo: Unexpected item list size %u (account_id=%d, block size=%u)\n"
+- Original: "clif_parse_SearchStoreInfo: Unexpected item list size %u (account_id=%d, block size=%[{PRIdPTR}])\n"
   Translation: ""
 - Original: "clif_parse_StatusUp: Negative 'increase' value sent by client! (fd: %d, value: %d)\n"
   Translation: ""
@@ -2671,8 +2709,6 @@ Body:
 - Original: "clif_send: Unrecognized type %d\n"
   Translation: ""
 - Original: "clif_showscript: Truncating too long message '%s' (len=%[{PRIuPTR}]).\n"
-  Translation: ""
-- Original: "clif_skill_fail: Error, received NULL sd for skill %d\n"
   Translation: ""
 - Original: "clif_sub_ranklist: Unsupported ranking type '%d'. Please report this.\n"
   Translation: ""
@@ -2832,13 +2868,17 @@ Body:
   Translation: ""
 - Original: "ers_report: '[{CL_WHITE}]%u[{CL_NORMAL}]' caches in use\n"
   Translation: ""
-- Original: "exp_guild: Invalid exp %d at line %d\n"
+- Original: "exp_guild: Invalid exp %[{PRIu64}] at line %d, exceeds max of %[{PRIu64}]\n"
   Translation: ""
 - Original: "geoip_cache reading didn't read all elements \n"
   Translation: ""
-- Original: "get_percentage(): divison by zero! (A=%u,B=%u)\n"
+- Original: "get_percentage: divison by zero! (A=%u,B=%u)\n"
   Translation: ""
-- Original: "get_percentage(): result percentage too high! (A=%u,B=%u,result=%g)\n"
+- Original: "get_percentage: result percentage too high! (A=%u,B=%u,result=%g)\n"
+  Translation: ""
+- Original: "get_percentage_exp: divison by zero! (a=%[{PRIu64}],b=%[{PRIu64}])\n"
+  Translation: ""
+- Original: "get_percentage_exp: result percentage too high! (a=%[{PRIu64}],b=%[{PRIu64}],result=%g)\n"
   Translation: ""
 - Original: "get_val2_num: Invalid call. Variable %s is a numeric type.\n"
   Translation: ""
@@ -3652,7 +3692,7 @@ Body:
   Translation: ""
 - Original: "npc_timerevent_stop: Attached player not found!\n"
   Translation: ""
-- Original: "npc_touch_areanpc : stray NPC cell/NPC not found in the block on coordinates '%s',%d,%d\n"
+- Original: "npc_touch_area_allnpc : stray NPC cell/NPC not found in the block on coordinates '%s',%d,%d\n"
   Translation: ""
 - Original: "npcskill: level exceeded maximum of %d.\n"
   Translation: ""
@@ -3840,6 +3880,10 @@ Body:
   Translation: ""
 - Original: "pc_bonus_subele: Reached max (%d) number of resist element damage bonuses per character!\n"
   Translation: ""
+- Original: "pc_bonus_subrace: Item bonus rate %d exceeds -10000~10000 range, capping.\n"
+  Translation: ""
+- Original: "pc_bonus_subrace: Reached max (%d) number of resist race damage bonuses per character!\n"
+  Translation: ""
 - Original: "pc_calc_skilltree: Unable to normalize job %d for character %s (%d:%d)\n"
   Translation: ""
 - Original: "pc_check_RegistryVariableLength: Variable value length is too long (aid: %d, cid: %d): '%s' sz=%zu\n"
@@ -3910,9 +3954,13 @@ Body:
   Translation: ""
 - Original: "pc_readdb_job_exp: Invalid type %d specified.\n"
   Translation: ""
+- Original: "pc_readdb_job_exp: No value defined for level %d in line %d. Defaulting to MAX_EXP...\n"
+  Translation: ""
 - Original: "pc_readdb_job_exp: Number of columns %d defined is too low for max level %d.\n"
   Translation: ""
 - Original: "pc_readdb_job_exp: Specified max %u for job %d, but that job's exp table only goes up to level %u.\n"
+  Translation: ""
+- Original: "pc_readdb_job_exp: Value %[{PRIu64}] is too high, capping to %[{PRIu64}]...\n"
   Translation: ""
 - Original: "pc_readdb_job_noenter_map: Invalid job %d specified.\n"
   Translation: ""
@@ -3975,10 +4023,6 @@ Body:
 - Original: "pc_skill: Skill with id %d does not exist in the skill database\n"
   Translation: ""
 - Original: "pc_skillup: Player attempts to level up invalid skill '%d'\n"
-  Translation: ""
-- Original: "pc_soulball_timer: %d soulball's available. (aid=%d tid=%d)\n"
-  Translation: ""
-- Original: "pc_soulball_timer: timer not found (aid=%d tid=%d)\n"
   Translation: ""
 - Original: "pc_spiritball_timer: %d spiritball's available. (aid=%d cid=%d tid=%d)\n"
   Translation: ""
