处理 Windows 10 编码选项带来的中文乱码问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -276,8 +276,6 @@ Body:
   Translation: ""
 - Original: "%s: %s is not a integer variable.\n"
   Translation: ""
-- Original: "%s: %s was failed (%s -> %s): %s\n"
-  Translation: ""
 - Original: "%s: %s: Invalid %s %d.\n"
   Translation: ""
 - Original: "%s: Caller: %s Line: %[{PRIuPTR}]\n"
@@ -308,21 +306,13 @@ Body:
   Translation: ""
 - Original: "%s: Unit with ID '%d' is not found.\n"
   Translation: ""
-- Original: "%s: Unsupport codeset: %s, defaulting to latin1\n"
-  Translation: ""
 - Original: "%s: Unsupport default ANSI codepage: %d, defaulting to latin1\n"
   Translation: ""
-- Original: "%s: Unsupport locale: %s, defaulting to english\n"
-  Translation: ""
 - Original: "%s: _Buffer size is only %lu but we need %lu, Could not realloc...\n"
-  Translation: ""
-- Original: "%s: dynamic buffer used, increase the static buffer size to %d or more.\n"
   Translation: ""
 - Original: "%s: fatal error ! player not attached!\n"
   Translation: ""
 - Original: "%s: not enough arguments for %s! Skipping...\n"
-  Translation: ""
-- Original: "%s: the param value: %s"
   Translation: ""
 - Original: "%s: variable '%s' for GameID is not a server variable, but no player is attached!\n"
   Translation: ""
@@ -726,10 +716,10 @@ Body:
   Translation: "已经从 import-tmpl 目录中复制了 %s 文件.\n"
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
   Translation: "探测到 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
-- Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
-  Translation: "终端信息翻译诊断信息: 内置页码 = %d | 交互语言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
-  Translation: "终端信息翻译诊断信息: 语言信息: %s | 位置编码: %s\n"
+  Translation: "诊断信息: 语言信息: %s | 位置编码: %s\n"
+- Original: "Diagnostic information: System Codepage = %d | UILanguage = 0x%04X | Console Codepage = %d\n"
+  Translation: "诊断信息: 系统内置页码 = %d | 交互语言 = 0x%04X | 终端输出页码 = %d\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已经完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则检测通过.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
