--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -276,8 +276,6 @@ Body:
   Translation: ""
 - Original: "%s: %s is not a integer variable.\n"
   Translation: ""
-- Original: "%s: %s was failed (%s -> %s): %s\n"
-  Translation: ""
 - Original: "%s: %s: Invalid %s %d.\n"
   Translation: ""
 - Original: "%s: Caller: %s Line: %[{PRIuPTR}]\n"
@@ -308,21 +306,13 @@ Body:
   Translation: ""
 - Original: "%s: Unit with ID '%d' is not found.\n"
   Translation: ""
-- Original: "%s: Unsupport codeset: %s, defaulting to latin1\n"
-  Translation: ""
 - Original: "%s: Unsupport default ANSI codepage: %d, defaulting to latin1\n"
   Translation: ""
-- Original: "%s: Unsupport locale: %s, defaulting to english\n"
-  Translation: ""
 - Original: "%s: _Buffer size is only %lu but we need %lu, Could not realloc...\n"
-  Translation: ""
-- Original: "%s: dynamic buffer used, increase the static buffer size to %d or more.\n"
   Translation: ""
 - Original: "%s: fatal error ! player not attached!\n"
   Translation: ""
 - Original: "%s: not enough arguments for %s! Skipping...\n"
-  Translation: ""
-- Original: "%s: the param value: %s"
   Translation: ""
 - Original: "%s: variable '%s' for GameID is not a server variable, but no player is attached!\n"
   Translation: ""
@@ -541,7 +531,7 @@ Body:
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @afk).\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @afk 指令登出了遊戲, 進入離開模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @autotrade).\n"
-  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @autotrade 指令登出了遊戲, 進入離線擺\攤模式.\n"
+  Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @autotrade 指令登出了遊戲, 進入離線擺攤模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off (using @suspend).\n"
   Translation: "角色 '[{CL_WHITE}]%s[{CL_RESET}]' 使用 @suspend 指令登出了遊戲, 進入離線掛機模式.\n"
 - Original: "Character '[{CL_WHITE}]%s[{CL_RESET}]' logged off.\n"
@@ -591,7 +581,7 @@ Body:
 - Original: "Connect Character DB server.... (Character Server)\n"
   Translation: "正在連線到角色資料庫伺服器....\n"
 - Original: "Connect success! (Map Server Connection)\n"
-  Translation: "連線成功\! (地圖伺服器已建立與資料庫之間的連線)\n"
+  Translation: "連線成功! (地圖伺服器已建立與資料庫之間的連線)\n"
 - Original: "Connected to login-server (connection #%d).\n"
   Translation: "已連線到登入伺服器 (連線編號為 #%d).\n"
 - Original: "Connecting to %d.%d.%d.%d:%i\n"
@@ -726,10 +716,10 @@ Body:
   Translation: "已經從 import-tmpl 目錄中複製了 %s 檔案.\n"
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
   Translation: "探測到 [{CL_WHITE}]'%s'[{CL_RESET}] 連線所指向的目標資料庫當前的字符集為 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
-- Original: "Diagnostic information: Codepage = %d | UILanguage = 0x%04X\n"
-  Translation: "終端資訊翻譯診斷資訊: 內建頁碼 = %d | 互動語言 = 0x%04X\n"
 - Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
-  Translation: "終端資訊翻譯診斷資訊: 語言資訊: %s | 位置編碼: %s\n"
+  Translation: "診斷資訊: 語言資訊: %s | 位置編碼: %s\n"
+- Original: "Diagnostic information: System Codepage = %d | UILanguage = 0x%04X | Console Codepage = %d\n"
+  Translation: "診斷資訊: 系統內建頁碼 = %d | 互動語言 = 0x%04X | 終端輸出頁碼 = %d\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已經完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則檢測通過.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
@@ -741,7 +731,7 @@ Body:
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' suspend player records (Offline: '%d', AFK: '%d').\n"
   Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位掛機的玩家. (離線掛機有 [{CL_WHITE}]%d[{CL_RESET}] 人, 離開模式有 [{CL_WHITE}]%d[{CL_RESET}] 人).\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' vending autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線擺\攤的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個在售道具.\n"
+  Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線擺攤的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個在售道具.\n"
 - Original: "Done reading %s.\n"
   Translation: "已讀取 %s.\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s%s[{CL_RESET}]'[{CL_CLL}]\n"
@@ -927,7 +917,7 @@ Body:
 - Original: "Inventory has been saved (AID: %d).\n"
   Translation: ""
 - Original: "Ipban connection made.\n"
-  Translation: "已經與 [{CL_WHITE}]IP 封禁黑名單[{CL_RESET}] 資料庫成功\建立連線.\n"
+  Translation: "已經與 [{CL_WHITE}]IP 封禁黑名單[{CL_RESET}] 資料庫成功建立連線.\n"
 - Original: "Item %hu (%s) have invalid equipment slot! Making it an etc item.\n"
   Translation: ""
 - Original: "Item %hu (%s) is an equipment with no equip-field! Making it an etc item.\n"
@@ -1033,7 +1023,7 @@ Body:
 - Original: "Map '[{CL_WHITE}]%s[{CL_RESET}]' not found!\n"
   Translation: "無法找到名為 '[{CL_WHITE}]%s[{CL_RESET}]' 的地圖!\n"
 - Original: "Map '[{CL_WHITE}]%s[{CL_RESET}]' successfully cached.\n"
-  Translation: "地圖 '[{CL_WHITE}]%s[{CL_RESET}]' 已被成功\快取.\n"
+  Translation: "地圖 '[{CL_WHITE}]%s[{CL_RESET}]' 已被成功快取.\n"
 - Original: "Map Server Bind IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "地圖伺服器繫結的 IP 地址 : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Map Server IP Address : '[{CL_WHITE}]%s[{CL_RESET}]' -> '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -1193,7 +1183,7 @@ Body:
 - Original: "Pet saved %d - %s.\n"
   Translation: "已儲存寵物資訊 (寵物編號: %d - 寵物名稱: %s).\n"
 - Original: "Pincode changed for AID: %d\n"
-  Translation: "已成功\為變更了滑鼠密碼 (賬號編號: %d)\n"
+  Translation: "已成功為變更了滑鼠密碼 (賬號編號: %d)\n"
 - Original: "Pincode is disabled.\n"
   Translation: ""
 - Original: "Pinging SQL server to keep connection alive...\n"
@@ -1373,7 +1363,7 @@ Body:
 - Original: "Subnet check [%u.%u.%u.%u]: [{CL_CYAN}]WAN[{CL_RESET}]\n"
   Translation: "子網檢查 [%u.%u.%u.%u]: [{CL_CYAN}]WAN - 廣域網[{CL_RESET}]\n"
 - Original: "Successfully loaded '[{CL_WHITE}]%d[{CL_RESET}]' maps.[{CL_CLL}]\n"
-  Translation: "已成功\載入了 '[{CL_WHITE}]%d[{CL_RESET}]' 張地圖.[{CL_CLL}]\n"
+  Translation: "已成功載入了 '[{CL_WHITE}]%d[{CL_RESET}]' 張地圖.[{CL_CLL}]\n"
 - Original: "Successfully logged on to Char Server (Connection: '[{CL_WHITE}]%d[{CL_RESET}]').\n"
   Translation: "已連線到角色伺服器 (連線編號為 #[{CL_WHITE}]%d[{CL_RESET}]).\n"
 - Original: "Terminating...\n"
@@ -1393,7 +1383,7 @@ Body:
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: "內部通訊賬號密碼通常設定在 map_athena.conf 和 char_athena.conf 檔案中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
-  Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋\它? 這是最後一次確認. (Y/N)\n"
+  Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋它? 這是最後一次確認. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
@@ -1521,9 +1511,9 @@ Body:
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
-  Translation: "您正在使用管理員身份執行熊貓模擬器, 但我們並不需要如此高的許\可權.\n"
+  Translation: "您正在使用管理員身份執行熊貓模擬器, 但我們並不需要如此高的許可權.\n"
 - Original: "You are running rAthena with root privileges, it is not necessary.\n"
-  Translation: "您正在使用 root 許\可權執行熊貓模擬器, 但我們並不需要如此高的許\可權.\n"
+  Translation: "您正在使用 root 許可權執行熊貓模擬器, 但我們並不需要如此高的許可權.\n"
 - Original: "Your MySQL does not support SHA2 and MD5 - no hashing will be used for login token creation.\n"
   Translation: ""
 - Original: "Zero range by %d:%s, divide per 0 avoided!\n"
@@ -1613,9 +1603,9 @@ Body:
 - Original: "[{CL_PASS}]     [{CL_BOLD}]        /_/  /_/  |_\\__/_/ /_/\\___/_/ /_/\\__,_/                  [{CL_PASS}][{CL_CLL}][{CL_NORMAL}]\n"
   Translation: ""
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](Birthdate)[{CL_RESET}].\n"
-  Translation: "[{CL_RED}]已成功\刪除角色[{CL_RESET}] [{CL_GREEN}](通過生日認證)[{CL_RESET}].\n"
+  Translation: "[{CL_RED}]已成功刪除角色[{CL_RESET}] [{CL_GREEN}](通過生日認證)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Char Deleted[{CL_RESET}] [{CL_GREEN}](E-Mail)[{CL_RESET}].\n"
-  Translation: "[{CL_RED}]已成功\刪除角色[{CL_RESET}] [{CL_GREEN}](通過 E-Mail 認證)[{CL_RESET}].\n"
+  Translation: "[{CL_RED}]已成功刪除角色[{CL_RESET}] [{CL_GREEN}](通過 E-Mail 認證)[{CL_RESET}].\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%d (%d)[{CL_RESET}]\n"
   Translation: "[{CL_RED}]請求刪除指定角色 [{CL_GREEN}]賬號編號: %d | 角色編號: %d[{CL_RESET}]\n"
 - Original: "[{CL_RED}]Request Char Deletion: [{CL_GREEN}]%u (%u)[{CL_RESET}]\n"
@@ -1631,7 +1621,7 @@ Body:
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
   Translation: "正在連線日誌資料庫 [{CL_WHITE}]'%s'[{CL_RESET}] 位於 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: "[{CL_GREEN}]已成功\連線[{CL_RESET}] 到日誌資料庫 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: "[{CL_GREEN}]已成功連線[{CL_RESET}] 到日誌資料庫 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:"
   Translation: "[{CL_YELLOW}][警告][{CL_RESET}]:"
 - Original: "\\*"
@@ -2723,19 +2713,19 @@ Body:
 - Original: "conf/battle/feature.conf achievement is enabled but it requires PACKETVER 2015-05-13 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf attendance system is enabled but it requires PACKETVER 2018-03-07 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了每日簽到系統, 但此功\能要求 PACKETVER 必須大於等於 2018-03-07 才有效, 正在禁用此功\能...\n"
+  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了每日簽到系統, 但此功能要求 PACKETVER 必須大於等於 2018-03-07 才有效, 正在禁用此功能...\n"
 - Original: "conf/battle/feature.conf banking is enabled but it requires PACKETVER 2013-07-24 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf equip switch is enabled but it requires PACKETVER 2017-02-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf homunculus autofeeding is enabled but it requires PACKETVER 2017-09-20 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了人工生命體自動餵養功\能, 但此功\能要求 PACKETVER 必須大於等於 2017-09-20 才有效, 正在禁用此功\能...\n"
+  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了人工生命體自動餵養功能, 但此功能要求 PACKETVER 必須大於等於 2017-09-20 才有效, 正在禁用此功能...\n"
 - Original: "conf/battle/feature.conf pet auto feed is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf petevolution is enabled but it requires PACKETVER 2014-10-08 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf private airship system is enabled but it requires PACKETVER 2018-03-21 or newer, disabling...\n"
-  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了私有飛空艇系統(世界移動券), 但此功\能要求 PACKETVER 必須大於等於 2018-03-21 才有效, 正在禁用此功\能...\n"
+  Translation: "您已在 conf/battle/feature.conf 配置檔案中啟用了私有飛空艇系統(世界移動券), 但此功能要求 PACKETVER 必須大於等於 2018-03-21 才有效, 正在禁用此功能...\n"
 - Original: "conf/battle/feature.conf roulette is enabled but it requires PACKETVER 2014-10-22 or newer, disabling...\n"
   Translation: ""
 - Original: "conf/battle/feature.conf:bgqueue is enabled but it requires PACKETVER 2012-01-01 or newer, disabling...\n"
