--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="msg_conf.hpp" />
     <ClInclude Include="nullpo.hpp" />
     <ClInclude Include="performance.hpp" />
+    <ClInclude Include="processmutex.hpp" />
     <ClInclude Include="random.hpp" />
     <ClInclude Include="showmsg.hpp" />
     <ClInclude Include="socket.hpp" />
@@ -69,6 +70,7 @@
     <ClCompile Include="msg_conf.cpp" />
     <ClCompile Include="nullpo.cpp" />
     <ClCompile Include="performance.cpp" />
+    <ClCompile Include="processmutex.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="showmsg.cpp" />
     <ClCompile Include="socket.cpp" />
