--- a/src/common/common-minicore.vcxproj
+++ b/src/common/common-minicore.vcxproj
@@ -36,6 +36,7 @@
     <ClInclude Include="msg_conf.hpp" />
     <ClInclude Include="nullpo.hpp" />
     <ClInclude Include="performance.hpp" />
+    <ClInclude Include="processmutex.hpp" />
     <ClInclude Include="random.hpp" />
     <ClInclude Include="showmsg.hpp" />
     <ClInclude Include="strlib.hpp" />
@@ -61,6 +62,7 @@
     <ClCompile Include="msg_conf.cpp" />
     <ClCompile Include="nullpo.cpp" />
     <ClCompile Include="performance.cpp" />
+    <ClCompile Include="processmutex.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="showmsg.cpp" />
     <ClCompile Include="strlib.cpp" />
